# Standalone workspace — a CF Worker (cdylib/wasm32) can't share the parent's
# [profile]/deps. The parent Cargo.toml excludes this path.
[workspace]

[package]
name = "rauthy-cedar-worker"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Same shared app as the native server — this is the whole point.
rauthy-cedar-app = { path = "../app" }
# worker-jwks turns on the worker::Fetch JWKS helper (the one platform diff).
connectrpc-oidc = { path = "../../../crates/connectrpc-oidc", features = ["worker-jwks"] }
# The two CF-specific deps the Worker injects into make(): the MetricSink trait
# (implemented over Analytics Engine) and the RateLimiter trait (over CF Rate
# Limiting). The native server passes NoopSink / AllowAll from these same crates.
connectrpc-cf-metrics    = { path = "../../../crates/connectrpc-cf-metrics" }
connectrpc-cf-rate-limit = { path = "../../../crates/connectrpc-cf-rate-limit" }

worker        = { version = "0.8", features = ["http"] }
worker-macros = { version = "0.8", features = ["http"] }

http  = "1"
tower = { version = "0.5", default-features = false }
# tokio sync::OnceCell for the per-isolate JWKS cache (no runtime needed).
tokio = { version = "1", default-features = false, features = ["sync"] }
# async-trait for the CF MetricSink / RateLimiter impls (matches the traits).
async-trait = "0.1"

# False positive: worker-macros provides the `#[event(fetch)]` attribute macro
# (the Worker entrypoint, re-exported through `worker::event`). It's an
# attribute-only crate so machete sees no path reference — but it must stay or
# the Worker has no entrypoint and won't link.
[package.metadata.cargo-machete]
ignored = ["worker-macros"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
